# Vasilisdi-DiplomaUTH_Arduino-Raspberry

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  wpa_supplicant.conf.txt
Arduino_Archive/arduinoProject/: arduinoProject.ino
config/: config.yaml
dataset/raw_test_data/ball_fault_waveform/: bearing_001_Ch08_100g_PE_Acceleration.csv  bearing_020_Ch08_100g_PE_Acceleration.csv
dataset/raw_test_data/healthy machinery waveform/: normal_000-2_Ch08_100g_PE_Acceleration.csv  normal_000-4_Ch08_100g_PE_Acceleration.csv  normal_001-4_Ch08_100g_PE_Acceleration.csv  normal_001-5_Ch08_100g_PE_Acceleration.csv  normal_001-6_Ch08_100g_PE_Acceleration.csv  normal_001_Ch08_100g_PE_Acceleration.csv
dataset/raw_test_data/misalignment_waveform/: misalg_z_084_Ch08_100g_PE_Acceleration.csv  misalign_025_Ch08_100g_PE_Acceleration.csv  misalign_078-5_Ch08_100g_PE_Acceleration.csv  misalign_197_Ch08_100g_PE_Acceleration.csv  misalign_220_Ch08_100g_PE_Acceleration.csv  misalign_233_Ch08_100g_PE_Acceleration.csv
dataset/raw_test_data/unbalance_waveform/: ub_06_000-4_Ch08_100g_PE_Acceleration.csv  ub_06_000-5_Ch08_100g_PE_Acceleration.csv  ub_06_001-2_Ch08_100g_PE_Acceleration.csv  ub_06_001-4_Ch08_100g_PE_Acceleration.csv  ub_06_002_Ch08_100g_PE_Acceleration.csv
results/deployment/: readme.txt
results/deployment/supabase/: measurements_rows.csv  measurements_rows.json
sourceCode/: api.py  data_processing.py  main.py  serial_communication.py  utils.py
testing/: test_data_from_datasets1.py  test_data_from_datasets2.py  test_methods.py
(+19 files in other folders)
